--- a/index.css
+++ b/index.css
@@ -71,7 +71,9 @@ body{
     margin-left: auto;
     margin-right: auto;
     padding-left: 40px;
-    padding-bottom: 400px;
+    /* 修正 20230622 */
+    padding-bottom: 0px;
+
     font-size: 36px;
 }
 h3{text-align: center;
@@ -101,10 +103,10 @@ p{text-align: center;
 /* お知らせ */
 .news-list{
     list-style: none outside;
-    margin: 0px;
-    padding: 0px;
-    margin-left: 500px;
-    margin-right: 300px;
+    /* margin: 0px; */
+    /* padding: 0px; */
+    /* margin-left: 300px; */
+    /* margin-right: 300px; */
   }
   .news-list .item {
     display: flex;
@@ -147,6 +149,8 @@ p{text-align: center;
     width: 100%;
     font-size: 24px;
     text-align: left;
+    /* 修正 20230622 */
+    line-height: 25px;
   }
 
   /* マウスホバー（乗せた）時の表示 */
