--- a/活動量計.css
+++ b/活動量計.css
@@ -61,35 +61,36 @@
 
 
 .活動量計 {
-    width: 1500px;
-    height: 1100px;
+    width: 1000px;
+    height: 1000px;
     margin-left: auto;
     margin-right: auto;
     /* class="活動量計"のエリア表示 */
     /* background-color: #e5e2e2; */
 }
 .活動量計 img{
-    width: 1400px;
-    height: 1000px;
+    width: 1033px;
+    height: 731px;
     margin: 50px;
 }
 
 
 .活動量計-list{
-    width: 1500px;
-    max-width: 90%;
+    width: 1000px;
+    /* max-width: 90%; */
     margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 300px;
+    margin-right: ;
     /* グリッドレイアウト */
     display: grid;
     /* グリッド １列の数（幅の狭いブラウザ対応）　幅 */
-    grid-template-columns: repeat(2,900px);
+    grid-template-columns: repeat(2,800px);
     /* グリッド　列・行　間隔 */
     column-gap: 300px;
     row-gap: 50px;
     /* アイテムの左右の揃え */
-    justify-content: center;
+    /* 修正 20230623 justify-content削除 */
+    /* justify-content: center; */
 
     /* background-color: #e5e2e2; */
 }
@@ -100,7 +101,7 @@
 .img-item{
     width: 900px;
     height: 600px;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
 .活動量計-list dl{
